.kube/auth-app-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
          paths:
          - path: /auth-app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-app-service
                port:
                  number: 80
---
